--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -28,7 +28,7 @@
                       <div class="carousel-item active">
                          <h1 class="testimonial_taital">Testimonial</h1>
                          <div class="testimonial_left">
-                            <div class="client_img"><img src="images/client-img.png"></div>
+                            <div class="client_img"><img src="./imgs/client-img.png"></div>
                          </div>
                          <div class="testimonial_right">
                             <h1 class="jack_text">Hindona</h1>
@@ -39,7 +39,7 @@
                       <div class="carousel-item">
                          <h1 class="testimonial_taital">Testimonial</h1>
                          <div class="testimonial_left">
-                            <div class="client_img"><img src="images/client-img.png"></div>
+                            <div class="client_img"><img src="./imgs/client-img.png"></div>
                          </div>
                          <div class="testimonial_right">
                             <h1 class="jack_text">Hindona</h1>
@@ -50,7 +50,7 @@
                       <div class="carousel-item">
                          <h1 class="testimonial_taital">Testimonial</h1>
                          <div class="testimonial_left">
-                            <div class="client_img"><img src="images/client-img.png"></div>
+                            <div class="client_img"><img src="./imgs/client-img.png"></div>
                          </div>
                          <div class="testimonial_right">
                             <h1 class="jack_text">Hindona</h1>
