--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
                          <div class="overlay-content">
                             <a href="/">Home</a>
                             <a href="about">About</a>
-                            <a href="blog">Blog</a>
+                            <a href="blog">Create A Blog</a>
                             <a href="contact">Testimonial</a>
                             <a href="contact">Contact</a>
                          </div>
