--- a/views/pages/blog.ejs
+++ b/views/pages/blog.ejs
@@ -1,97 +1,38 @@
-<div class="barber_section layout_padding">
-    <div class="container">
-       <div class="braber_taital_main">
-          <div class="row">
-             <div class="col-lg-6">
-                <div class="barber_bg_main">
-                   <h1 class="barber_taital">Jhonson Barber is</h1>
-                   <p class="barber_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the lik</p>
-                   <div class="blogr_main">
-                      <div class="blogr_left">
-                         <p class="post_text">Post By :  Blogr</p>
-                      </div>
-                      <div class="blogr_right">
-                         <div class="comment_text">
-                            <ul>
-                               <li><a href="#">Like<span class="padding_10"><i class="fa fa-thumbs-up"></i></span></a></li>
-                               <li><a href="#">Comment<span class="padding_10"><i class="fa fa-comment"></i></span></a></li>
-                               <li><a href="#">Share<span class="padding_10"><i class="fa fa-share-alt" aria-hidden="true"></i></span></a></li>
-                            </ul>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="col-lg-6">
-                <div class="fashion_img">
-                   <img src="./imgs/img-1.png" class="fashion_img">
-                   <div class="read_bt"><a href="#">04<br>FEB</a></div>
-                </div>
-             </div>
+<div class="container px-4 px-lg-5">
+  <div class="row gx-4 gx-lg-5 justify-content-center">
+    
+      <div class="col-md-10 col-lg-8 col-xl-7">
+       <div class="my-5"></div> 
+        <form action="/blog" method="post">
+          <div class="form-group ">
+            <label for="exampleFormControlInput1">Title</label>
+            <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Type your title here">
           </div>
-       </div>
-       <div class="braber_taital_main">
-          <div class="row">
-             <div class="col-lg-6">
-                <div class="barber_bg_main">
-                   <h1 class="barber_taital">Save Plants and save life</h1>
-                   <p class="barber_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the lik</p>
-                   <div class="blogr_main">
-                      <div class="blogr_left">
-                         <p class="post_text">Post By :  Blogr</p>
-                      </div>
-                      <div class="blogr_right">
-                         <div class="comment_text">
-                            <ul>
-                               <li><a href="#">Like<span class="padding_10"><i class="fa fa-thumbs-up"></i></span></a></li>
-                               <li><a href="#">Comment<span class="padding_10"><i class="fa fa-comment"></i></span></a></li>
-                               <li><a href="#">Share<span class="padding_10"><i class="fa fa-share-alt" aria-hidden="true"></i></span></a></li>
-                            </ul>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="col-lg-6">
-                <div class="fashion_img">
-                   <img src="./imgs/img-2.png" class="fashion_img">
-                   <div class="read_bt"><a href="#">05<br>FEB</a></div>
-                </div>
-             </div>
+          
+          <div class="form-group my-3">
+            <label for="exampleFormControlTextarea1">Discription</label>
+            <textarea class="form-control" name="description" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-       </div>
-       <div class="braber_taital_main">
-          <div class="row">
-             <div class="col-lg-6">
-                <div class="barber_bg_main">
-                   <h1 class="barber_taital">Fashion  New Model</h1>
-                   <p class="barber_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the lik</p>
-                   <div class="blogr_main">
-                      <div class="blogr_left">
-                         <p class="post_text">Post By :  Blogr</p>
-                      </div>
-                      <div class="blogr_right">
-                         <div class="comment_text">
-                            <ul>
-                               <li><a href="#">Like<span class="padding_10"><i class="fa fa-thumbs-up"></i></span></a></li>
-                               <li><a href="#">Comment<span class="padding_10"><i class="fa fa-comment"></i></span></a></li>
-                               <li><a href="#">Share<span class="padding_10"><i class="fa fa-share-alt" aria-hidden="true"></i></span></a></li>
-                            </ul>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-             <div class="col-lg-6">
-                <div>
-                   <img src="./imgs/img-3.png" class="fashion_img">
-                   <div class="read_bt"><a href="#">05<br>FEB</a></div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
 
- <%-contentFor('title')%>
-Blog
+          <div class="form-group my-3">
+            <label for="exampleFormControlInput1">Author</label>
+            <input type="text" name="author" class="form-control" id="exampleFormControlInput1">
+          </div>
+
+          <div class="form-group my-3">
+            <label for="exampleFormControlInput1">Image</label>
+            <input type="file" name="image" class="form-control" id="exampleFormControlInput1">
+          </div>
+
+          <button type="submit" class="btn btn-primary mt-4">Submit</button>
+          <div class="my-5"></div>
+        </form>
+        </div>
+    </div>
+</div>
+
+
+
+
+<%-contentFor ('title') %>
+Add Blog
